// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Live Props 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-8soqr8"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </button>
</div>
`;

exports[`Storyshots Button.Color Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-8soqr8"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-19smwyn"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    OUTLINE
  </button>
  <button
    className="css-1qop9pa"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Color Primary 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-2la9h0"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-1vknfxw"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    OUTLINE
  </button>
  <button
    className="css-asq8cw"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Color Secondary 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-127752e"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-1mnt4ye"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    OUTLINE
  </button>
  <button
    className="css-12injzb"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Shape Circle 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1q3mqh5"
    color="default"
    disabled={false}
    shape="circle"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-3amftk"
    color="primary"
    disabled={false}
    shape="circle"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-aii26u"
    color="secondary"
    disabled={false}
    shape="circle"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Shape Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-8soqr8"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-2la9h0"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-127752e"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Shape Rounded 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-16vb05m"
    color="default"
    disabled={false}
    shape="rounded"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-18fklny"
    color="primary"
    disabled={false}
    shape="rounded"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-ih8tov"
    color="secondary"
    disabled={false}
    shape="rounded"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.State Disabled 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-8soqr8"
    color="default"
    disabled={true}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-2la9h0"
    color="primary"
    disabled={true}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-127752e"
    color="secondary"
    disabled={true}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-19smwyn"
    color="default"
    disabled={true}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-1vknfxw"
    color="primary"
    disabled={true}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-1mnt4ye"
    color="secondary"
    disabled={true}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-1qop9pa"
    color="default"
    disabled={true}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-asq8cw"
    color="primary"
    disabled={true}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-12injzb"
    color="secondary"
    disabled={true}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.State Loading 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-nj61vj"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-1rdrfoz"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-1np80yu"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-iymz6n"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-3p6gx8"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-17dm8oa"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-1sd18g7"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-vgfmaa"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-uo8e8b"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Variant Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-8soqr8"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-2la9h0"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-127752e"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Variant Outline 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-19smwyn"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-1vknfxw"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-1mnt4ye"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Variant Text 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1qop9pa"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-asq8cw"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-12injzb"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Checkbox Live Props 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="dff0dd64-3cb1-44da-93a1-471f8dd9cb71"
    type="checkbox"
  />
  <label
    className="css-yt34lr"
    color="default"
    htmlFor="dff0dd64-3cb1-44da-93a1-471f8dd9cb71"
    shape="default"
  >
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Default 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="9c86a44f-9c99-49a7-9754-7ab29441c045"
    type="checkbox"
  />
  <label
    className="css-1nku9ek"
    color="default"
    htmlFor="9c86a44f-9c99-49a7-9754-7ab29441c045"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="8a219bc4-5486-450f-b2b2-9ca91175b609"
    type="checkbox"
  />
  <label
    className="css-1f9mlpm"
    color="default"
    htmlFor="8a219bc4-5486-450f-b2b2-9ca91175b609"
    shape="rounded"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="f451e568-f9e3-4ac9-99ea-acb0592633fb"
    type="checkbox"
  />
  <label
    className="css-jo1him"
    color="default"
    htmlFor="f451e568-f9e3-4ac9-99ea-acb0592633fb"
    shape="circle"
  />
</div>
`;

exports[`Storyshots Checkbox.Color Primary 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="85e5cdd2-5b37-4dd0-90ef-388a9ca0b789"
    type="checkbox"
  />
  <label
    className="css-1f747hc"
    color="primary"
    htmlFor="85e5cdd2-5b37-4dd0-90ef-388a9ca0b789"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="ae5a6b02-9dfe-4e2d-b49b-7dddd132b1a8"
    type="checkbox"
  />
  <label
    className="css-nogyyx"
    color="primary"
    htmlFor="ae5a6b02-9dfe-4e2d-b49b-7dddd132b1a8"
    shape="rounded"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="792af9f8-1db0-425f-9374-efc2a28bd6e4"
    type="checkbox"
  />
  <label
    className="css-13q467c"
    color="primary"
    htmlFor="792af9f8-1db0-425f-9374-efc2a28bd6e4"
    shape="circle"
  />
</div>
`;

exports[`Storyshots Checkbox.Color Secondary 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="212c68fe-2121-4517-b8f9-f8caf3f14471"
    type="checkbox"
  />
  <label
    className="css-uejh1u"
    color="secondary"
    htmlFor="212c68fe-2121-4517-b8f9-f8caf3f14471"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="c2327aba-c93a-4a4d-ad9c-981770be678e"
    type="checkbox"
  />
  <label
    className="css-15z40qn"
    color="secondary"
    htmlFor="c2327aba-c93a-4a4d-ad9c-981770be678e"
    shape="rounded"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="be76767d-1795-43b4-8655-85bfc497b37c"
    type="checkbox"
  />
  <label
    className="css-1oxve1"
    color="secondary"
    htmlFor="be76767d-1795-43b4-8655-85bfc497b37c"
    shape="circle"
  />
</div>
`;

exports[`Storyshots Checkbox.Shape Circle 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="a94ab3e6-0e0c-4c8d-9faa-4975429c7de1"
    type="checkbox"
  />
  <label
    className="css-jo1him"
    color="default"
    htmlFor="a94ab3e6-0e0c-4c8d-9faa-4975429c7de1"
    shape="circle"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="be1738e5-fc39-4957-940c-005e0f556081"
    type="checkbox"
  />
  <label
    className="css-13q467c"
    color="primary"
    htmlFor="be1738e5-fc39-4957-940c-005e0f556081"
    shape="circle"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="f3283a3e-042f-4961-8754-e32a2a5c1318"
    type="checkbox"
  />
  <label
    className="css-1oxve1"
    color="secondary"
    htmlFor="f3283a3e-042f-4961-8754-e32a2a5c1318"
    shape="circle"
  />
</div>
`;

exports[`Storyshots Checkbox.Shape Default 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="ac1caec6-3725-4021-bb7a-02f385397207"
    type="checkbox"
  />
  <label
    className="css-1nku9ek"
    color="default"
    htmlFor="ac1caec6-3725-4021-bb7a-02f385397207"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="2f611f75-c555-4aa2-a89d-dd8094084833"
    type="checkbox"
  />
  <label
    className="css-1f747hc"
    color="primary"
    htmlFor="2f611f75-c555-4aa2-a89d-dd8094084833"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="692b2ed4-4ca0-4f15-821b-ed50a5f7503b"
    type="checkbox"
  />
  <label
    className="css-uejh1u"
    color="secondary"
    htmlFor="692b2ed4-4ca0-4f15-821b-ed50a5f7503b"
    shape="default"
  />
</div>
`;

exports[`Storyshots Checkbox.Shape Rounded 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="50105c30-eafa-412a-b567-9c47120d4016"
    type="checkbox"
  />
  <label
    className="css-1f9mlpm"
    color="default"
    htmlFor="50105c30-eafa-412a-b567-9c47120d4016"
    shape="rounded"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="a4e50c37-7540-4213-987a-a4f11fdf676f"
    type="checkbox"
  />
  <label
    className="css-nogyyx"
    color="primary"
    htmlFor="a4e50c37-7540-4213-987a-a4f11fdf676f"
    shape="rounded"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="eaf9fe51-74f2-49a3-a14d-bb761b54f13d"
    type="checkbox"
  />
  <label
    className="css-15z40qn"
    color="secondary"
    htmlFor="eaf9fe51-74f2-49a3-a14d-bb761b54f13d"
    shape="rounded"
  />
</div>
`;

exports[`Storyshots Checkbox.State Controlled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    id="16639207-d1c5-498a-b9ef-8e9c74cc69a9"
    type="checkbox"
  />
  <label
    className="css-1nku9ek"
    color="default"
    htmlFor="16639207-d1c5-498a-b9ef-8e9c74cc69a9"
    shape="default"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    id="7d042145-d5a9-4849-ac29-3c0a4007f03e"
    type="checkbox"
  />
  <label
    className="css-1f747hc"
    color="primary"
    htmlFor="7d042145-d5a9-4849-ac29-3c0a4007f03e"
    shape="default"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    id="2bbd8fb4-b23b-4bbd-a331-2b3a86138c27"
    type="checkbox"
  />
  <label
    className="css-uejh1u"
    color="secondary"
    htmlFor="2bbd8fb4-b23b-4bbd-a331-2b3a86138c27"
    shape="default"
  />
</div>
`;

exports[`Storyshots Checkbox.State Uncontrolled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="6eb3a1c4-58f3-476c-9aaa-d02df6041f92"
    type="checkbox"
  />
  <label
    className="css-1nku9ek"
    color="default"
    htmlFor="6eb3a1c4-58f3-476c-9aaa-d02df6041f92"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="a3be2326-eea6-41b4-a3df-72c0f26eec36"
    type="checkbox"
  />
  <label
    className="css-1f747hc"
    color="primary"
    htmlFor="a3be2326-eea6-41b4-a3df-72c0f26eec36"
    shape="default"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="00493e04-fc06-4a82-8ffd-3e70e57d8656"
    type="checkbox"
  />
  <label
    className="css-uejh1u"
    color="secondary"
    htmlFor="00493e04-fc06-4a82-8ffd-3e70e57d8656"
    shape="default"
  />
</div>
`;

exports[`Storyshots Switch Live Props 1`] = `
<div
  className="css-14973vb"
>
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    id="29cc1692-3db8-4654-8862-88413644c7c2"
    type="checkbox"
  />
  <label
    className="css-1l9dxke"
    color="default"
    htmlFor="29cc1692-3db8-4654-8862-88413644c7c2"
  />
  Change my appearance from 
  <strong>
    "Knobs"
  </strong>
   tab
</div>
`;

exports[`Storyshots Switch.State Controlled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    id="3fabfc9b-e802-4b6c-98ec-dbf8594b9623"
    type="checkbox"
  />
  <label
    className="css-1emgtia"
    color="default"
    htmlFor="3fabfc9b-e802-4b6c-98ec-dbf8594b9623"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    id="6cea1883-7470-4ba3-b7a7-4a3831537eeb"
    type="checkbox"
  />
  <label
    className="css-icqkeq"
    color="primary"
    htmlFor="6cea1883-7470-4ba3-b7a7-4a3831537eeb"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    id="9531074e-5cd0-4bfa-8521-ab4a178d8e3e"
    type="checkbox"
  />
  <label
    className="css-3qbzrk"
    color="secondary"
    htmlFor="9531074e-5cd0-4bfa-8521-ab4a178d8e3e"
  />
</div>
`;

exports[`Storyshots Switch.State Uncontrolled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="b5d5116b-9e7b-4a5f-b051-501f5dcb79dc"
    type="checkbox"
  />
  <label
    className="css-1emgtia"
    color="default"
    htmlFor="b5d5116b-9e7b-4a5f-b051-501f5dcb79dc"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="9ad74cf0-f213-461d-bb90-29af86c865f4"
    type="checkbox"
  />
  <label
    className="css-icqkeq"
    color="primary"
    htmlFor="9ad74cf0-f213-461d-bb90-29af86c865f4"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    id="bdf9499e-302e-42c8-be51-b0069aec676b"
    type="checkbox"
  />
  <label
    className="css-3qbzrk"
    color="secondary"
    htmlFor="bdf9499e-302e-42c8-be51-b0069aec676b"
  />
</div>
`;
